tests/semantic/valid/02_global_const.tc
const int A = 10;
int main(void) {
    return A;
}
