tests/semantic/invalid/12_break_outside_loop.tc
// ERR_BREAK_OUTSIDE_LOOP: break statement not inside a loop
int main(void) {
    break;
    return 0;
}
